crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__test__class__inherited_method.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/class/inherited_method.lox
---
success: true
exit_code: 0
----- stdout -----
in foo
in bar
in baz

----- stderr -----
